--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<!-- cart.html -->
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <h1>Cart</h1>
+    <ul>
+    {% for product in cart.listofproducts.all %}
+        <li>
+            {{ product.name }}
+            <!-- Add more product details if needed -->
+            <form action="{% url 'remove_from_cart' product.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit">Remove</button>
+            </form>
+        </li>
+    {% endfor %}
+    </ul>
+    <p>Total Price: ${{ cart.totalprice }}</p>
+    <form action="{% url 'checkout' %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Checkout</button>
+    </form>
+{% endblock %}
