fixed admin.py. Page is working.

--- a/store/templates/store/registration/register.html
+++ b/store/templates/store/registration/register.html
@@ -1,5 +1,5 @@
 <!-- register.html -->
-{% extends 'base.html' %}
+{% extends 'store/base.html' %}
 
 {% block content %}
     <h1>User Registration</h1>
