--- a/store/templates/store/order_confirmation.html
+++ b/store/templates/store/order_confirmation.html
@@ -1,5 +1,5 @@
 <!-- order_confirmation.html -->
-{% extends 'base.html' %}
+{% extends 'store/base.html' %}
 
 {% block content %}
     <h1>Order Confirmation</h1>
