--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -1,5 +1,5 @@
 <!-- product_detail.html -->
-{% extends 'base.html' %}
+{% extends 'store/base.html' %}
 
 {% block content %}
     <h1>Product Detail</h1>
