--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -3,5 +3,10 @@
 {% block content %}
     <h1>Welcome to My E-commerce Store</h1>
     <p>Here you can find a wide range of products for all your needs.</p>
-    <!-- Add your home page content here -->
+
+    <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+    <a href="{% url 'register' %}" class="btn btn-primary">Register</a>
+    <a href="{% url 'product_list' %}" class="btn btn-primary">View Products</a>
+    <a href="{% url 'cart' %}" class="btn btn-primary">Cart</a>
+
 {% endblock %}
