Added log out in home and home button in product list.

--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 
+    <!-- add back to home button-->
+
+    <a href="{% url 'home' %}">Home</a>
+
     <form method="GET">
         <div class="form-group">
             <label for="category">Category:</label>
