--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -8,5 +8,6 @@
     <a href="{% url 'register' %}" class="btn btn-primary">Register</a>
     <a href="{% url 'product_list' %}" class="btn btn-primary">View Products</a>
     <a href="{% url 'cart' %}" class="btn btn-primary">Cart</a>
+    <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
 
 {% endblock %}
