--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -13,7 +13,7 @@
             <select name="category" id="category" class="form-control">
                 <option value="">All</option>
                 {% for category in categories %}
-                    <option value="{{ category.id }}">{{ category.name }}</option>
+                    <option value="{{ category.name }}">{{ category.name }}</option>
                 {% endfor %}
             </select>
         </div>
