--- a/store/templates/store/registration/register.html
+++ b/store/templates/store/registration/register.html
@@ -7,5 +7,6 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Register</button>
+        <a href="{% url 'product_list' %}" class="btn btn-primary">View Products</a>
     </form>
 {% endblock %}
