Added login required for "add to cart". Same for "Personal Cart" which calls cart view + added this button in the home and in login template.

--- a/store/templates/store/registration/login.html
+++ b/store/templates/store/registration/login.html
@@ -8,5 +8,6 @@
         {{ form.as_p }}
         <button type="submit">Login</button>
         <a href="{% url 'product_list' %}" class="btn btn-primary">View Products</a>
+        <a href="{% url 'cart' %}" class="btn btn-primary">Personal Cart</a>
     </form>
 {% endblock %}
