Added buttons in some templates for better navigation. Made totalprice field of cart model not null.

--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -20,4 +20,5 @@
         {% csrf_token %}
         <button type="submit">Checkout</button>
     </form>
+    <a href="{% url 'product_list' %}">Continue Shopping</a>
 {% endblock %}
