--- a/store/templates/store/order_confirmation.html
+++ b/store/templates/store/order_confirmation.html
@@ -4,4 +4,5 @@
 {% block content %}
     <h1>Order Confirmation</h1>
     <p>Thank you for your order!</p>
+    <a href="{% url 'home' %}">Back to home</a>
 {% endblock %}
