--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -6,9 +6,13 @@
 
 <head>
 
+    {% load static %}
+
     <title>E-commerce Store</title>
+
     <!-- Include necessary CSS and JavaScript files -->
 
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
 </head>
