Removed useless buttons in login template. Added button to go back from product details. Added a message for a successful logout.

--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -14,4 +14,6 @@
         <button type="submit">Add to Cart</button>
     </form>
 
+    <a href="{% url 'product_list' %}">Go back</a>
+
 {% endblock %}
